# vge

./: .gitmodules  CMakeLists.txt
src/: Camera.cpp  Camera.h  helper.h  log.cpp  log.h  main.cpp  memory.cpp  memory.h  vulkan_init.cpp  vulkan_init.h
src/VkRenderer/: VkRenderer.h  app.cpp  app.h  command_buffer.cpp  destroy.cpp  device.cpp  gbuffer.cpp  swapchain.cpp  utils.cpp  utils.h  vulkan_init.cpp
test/: main.cpp
tiny_gltf/: stb_image.h  tiny_gltf.h
